--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+
+    <title>Norman Qian</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
+
+<body class="text-center text-white bg-dark">
+
+    <img class="backdrop linktree">
+
+    <h2>Norman Qian</h2>
+
+        <div class="row-center" id="social-test">
+            <i onclick="location.href='https://twitter.com/normanqian'" class="fa fa-twitter" aria-hidden="true"></i>
+            <i onclick="location.href='https://github.com/elizasviel'" class="fa fa-github" aria-hidden="true"></i>
+            <i onclick="location.href='https://www.linkedin.com/in/norman-qian/'" class="fa fa-linkedin" aria-hidden="true"></i>
+            <i onclick="location.href='https://www.instagram.com/ddayqian/?hl=en'" class="fa fa-instagram" aria-hidden="true"></i>
+
+            <audio controls>
+            <source src="./[MapleStory BGM] Henesys_ Cava Bien.mp3" type="audio/mpeg">
+            </audio>
+        </div>
+
+    <div style="padding-bottom: 30px;">
+        <button onclick="location.href='page0.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">About Me</button>
+    </div>
+
+    <div style="padding-bottom: 30px;">
+        <button onclick="location.href='page1.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Services</button>
+    </div>
+
+    <div style="padding-bottom: 30px;">
+        <button onclick="location.href='page2.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Leave a Message</button>
+    </div>
+
+    <div style="padding-bottom: 30px;">
+        <button onclick="location.href='page3.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Blog</button>
+    </div>
+
+<input id="slider" name="slider" type="range" value=0>
+
+<script src="script.js"></script>
+
+</body>
+
+</html>
