--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charSet="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/></head><body style="width:100%;height:100%;padding:0;margin:0;overscroll-behavior:none;overflow:hidden"><script>
-              console.log(
-                "💿 Hey developer 👋. You can provide a way better UX than this " +
-                "when your app is running `clientLoader` functions on hydration. " +
-                "Check out https://remix.run/route/hydrate-fallback for more information."
-              );
-            </script><link rel="modulepreload" href="/assets/manifest-7eeba171.js"/><link rel="modulepreload" href="/assets/entry.client-jPehgn16.js"/><link rel="modulepreload" href="/assets/jsx-runtime-56DGgGmo.js"/><link rel="modulepreload" href="/assets/components-BAmE7OwT.js"/><link rel="modulepreload" href="/assets/root-aIisxdE4.js"/><script>window.__remixContext = {"url":"/","basename":"/","future":{"v3_fetcherPersist":true,"v3_relativeSplatPath":true,"v3_throwAbortReason":true,"unstable_singleFetch":false},"isSpaMode":true,"state":{"loaderData":{"root":null,"routes/_index":null},"actionData":null,"errors":null}};</script><script type="module" async="">import "/assets/manifest-7eeba171.js";
-import * as route0 from "/assets/root-aIisxdE4.js";
-window.__remixRouteModules = {"root":route0};
-
-import("/assets/entry.client-jPehgn16.js");</script></body></html>
+<meta http-equiv="refresh" content="0;url=https://elizasviel.github.io/personalSite/build/client/index.html" />
