--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
-  <script type="module" crossorigin src="/elizasviel.github.io/assets/main-DznqpRZt.js"></script>
-  <link rel="stylesheet" crossorigin href="/elizasviel.github.io/assets/main-CIfZCfxM.css">
+  <script type="module" crossorigin src="/assets/main-B9LA8FlW.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-CIfZCfxM.css">
 </head>
 
 <body style="overflow: hidden; margin: 0; padding: 0;">
