--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="overflow: hidden; margin: 0; padding: 0;">
-  <div id="root"></div>
+  <div id="root">abcde testing</div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
