deploy: c6b25423ae3b7beae7fa26d0e210998ffff86d5b

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="overflow: hidden; margin: 0; padding: 0;">
-  <div id="root"></div>
+  <div id="root">abcde testing</div>
 </body>
 
 </html>
